tests/NormalTests/paczka1/small_fuzzy/53308060.err
Error in line 3: mt4t9 S772 8,5
Error in line 5: nsXeh9q S30 84,3
Error in line 6: nsXeh9q A649 21,7
Error in line 8: nsXeh9q A783 99,1
Error in line 12: mt4t9 A649 57,2
